fix desktop header z index, update custom scrollbar styles to match theme,

--- a/packages/web/app/globals.css
+++ b/packages/web/app/globals.css
@@ -32,12 +32,16 @@
 @media (min-width: 500px) {
   ::-webkit-scrollbar {
     /* Track color */
-    background-color: var(--color-background);
+    background-color: var(--scrollbar-background-color);
+    width: 12px;
+    height: 12px;
   }
 
   ::-webkit-scrollbar-thumb {
     /* Thumb color */
-    background-color: var(--color-background-accent);
+    background-color: var(--scrollbar-color);
+    border-radius: 6px;
+    border: 2px solid var(--scrollbar-background-color);
   }
 }
 
