--- a/packages/web/components/Header/Header.module.css
+++ b/packages/web/components/Header/Header.module.css
@@ -7,6 +7,9 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem 0;
+  /* Necessary so top gradient doesn't overlap */
+  position: relative;
+  z-index: 2;
 }
 
 .right {
